--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,21 @@
-# Core libraries for Jupyter notebooks
+# Core libraries for notebooks
 jupyter
 notebook
-ipython
+ipywidgets
 
-# Google AI SDK for Gemini API
+# AI model SDKs
 google-generativeai
+openai
+anthropic
 
-# API and web requests
+# Data handling & scientific computing
+pandas
+numpy
+scikit-learn
+
+# Utilities
 requests
-
-# Image processing
+python-dotenv
 Pillow
 pdf2image
-
-# Data handling and scientific computing
-numpy
-pandas
-
-# Vector similarity search
-faiss-cpu
-
-# Progress bars for Jupyter
 tqdm
-
-# Environment variable management
-python-dotenv
-
-# Optional but recommended for better notebook experience
-ipywidgets
